Changed styling on "submit" + fixed spacing issues on yellow popup

--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ a:active{
 #popuptext-yellow{
 	padding-right: 2rem;
 	padding-left: 2rem;
-	grid-column: 2 / span 4;
+	grid-column: 1 / span 6;
 }
 
 /*Form*/
@@ -443,12 +443,14 @@ input[type=submit]{
 	font-family: "Pixelated MS Sans Serif";
 	font-size: 1rem;
 	line-height: 1.6rem;
+	letter-spacing: 2;
 	padding-left: 2rem;
 	padding-right: 2rem;
 	border: none;
 	box-shadow: 2px 2px 1px rgba(0, 0, 0, .5);
 	border-top: 2px solid rgba(255,255,255, 1);
 	border-left: 2px solid rgba(255,255,255, 1);
+	margin-top: .8rem;
 }
 
 input[type=submit]:focus, input[type=submit]:active{
